[package]
name = "quasar_trajectory"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["config", "controller", "detector", "messages", "server", "tracker"]

[workspace.dependencies]
opencv = { version = "0.94.2", features = ["clang-runtime"] }
anyhow = "1.0.95"
criterion = "0.5.1"
bindgen = "0.71.1"
libc = "0.2.169"
cc = "1.2.12"
log = "0.4.25"
rand = "0.9.0"
crossbeam-channel = "0.5.14"

[dependencies]
detector = { path = "detector" }
config = { path = "config" }
log = { workspace = true }
env_logger = "0.11.6"
ctrlc = "3.4.5"


[features]
default = ["gui", "hikvision"]
gui = ["detector/gui"]
hikvision = ["detector/hikvision"]
mindvision = ["detector/mindvision"]
