[package]
edition = "2021"
name = "quasar_trajectory"
version = "0.1.0"

[workspace]
members = [
  "config",
  "controller",
  "detector",
  "server",
  "tracker",
  "camera",
  "utility",
]

[workspace.dependencies]
anyhow = "1.0.95"
bindgen = "0.71.1"
cc = "1.2.13"
criterion = "0.5.1"
crossbeam-channel = "0.5.14"
libc = "0.2.169"
log = "0.4.25"
opencv = { version = "0.94.2", features = ["clang-runtime"] }
rand = "0.9.0"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
tungstenite = "0.26.1"
ultraviolet = "0.9.2"
toml = "0.8.20"

utility = { path = "utility" }
camera = { path = "camera" }
server = { path = "server" }
config = { path = "config" }
detector = { path = "detector" }

[dependencies]
ctrlc = "3.4.5"
env_logger = "0.11.6"
log = { workspace = true }

camera = { workspace = true }
config = { workspace = true }
utility = { workspace = true }
detector = { workspace = true }

[features]
default = ["gui", "hikvision"]
gui = ["detector/gui"]
hikvision = ["camera/hikvision"]
mindvision = ["camera/mindvision"]
