[package]
edition = "2021"
name = "camera"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

config = { workspace = true }
utility = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cc = { workspace = true }

[features]
hikvision = []
mindvision = []
