[package]
name = "detector"
version = "0.1.0"
edition = "2021"

[dependencies]
messages = { path = "../messages" }
config = { path = "../config" }
server = { path = "../server", optional = true }
anyhow = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
opencv = { workspace = true }
rand = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cc = { workspace = true }

[features]
mindvision = []
hikvision = []
gui = ["server"]
