[package]
edition = "2021"
name = "detector"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
camera = { workspace = true }
config = { workspace = true }
# libc = {workspace = true}
log = { workspace = true }
opencv = { workspace = true }
rand = { workspace = true }
server = { workspace = true, optional = true }
utility = { workspace = true }

[features]
gui = ["server"]
