[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "tube_benchmark"
harness = false

[features]
default = ["use_crossbeam"]
use_crossbeam = ["crossbeam-channel"]
