[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
config = {workspace = true}
crossbeam-channel = {workspace = true}
log = {workspace = true}
opencv = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
tungstenite = {workspace = true}
ultraviolet = {workspace = true}
utility = {workspace = true}

rmp-serde = {workspace = true}
