[package]
name = "utility"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }

# server = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "tube_benchmark"
harness = false

[features]
gui = []
