[package]
edition = "2021"
name = "utility"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
crossbeam-channel = {workspace = true}
log = {workspace = true}
rand = {workspace = true}

# server = { workspace = true, optional = true }

[dev-dependencies]
criterion = {workspace = true}

[[bench]]
harness = false
name = "tube_benchmark"

[features]
gui = []
