[package]
name = "camera"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }

config = { workspace = true }
utility = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cc = { workspace = true }

[features]
mindvision = []
hikvision = []
